# bombertank

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  map.btm  txt_to_map.py
.github/workflows/: ci.yml
client/: AppContext.cpp  AppContext.hpp  CMakeLists.txt  GameServer.cpp  GameServer.hpp  GameState.cpp  GameState.hpp  MapView.cpp  MapView.hpp  main.cpp  qml.qrc
client/objects/: Base.cpp  Base.hpp  TankControl.cpp  TankControl.hpp  TankState.cpp  TankState.hpp  TurretState.cpp  TurretState.hpp
client/qml/: main.qml
client/qml/Sprite/: BaseSprite.qml  Bomb.qml  Crate.qml  Explosion.qml  IndestructableWall.qml  Laser.qml  LaserTurret.qml  MGShell.qml  MGTurret.qml  Rocket.qml  Shell.qml  StartZone.qml  StunWave.qml  StunnedAnimation.qml  Tank.qml  TankInput.qml  TimedBomb.qml  Wall.qml
client/qml/Sprite/TankModules/: MineDetector.qml  StunModule.qml  TankModule.qml
client/qml/Theme/: Button.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  Popup.qml  ScrollBar.qml  Slider.qml  Switch.qml  ToolBar.qml  qmldir
client/qml/UI/: EditorPage.qml  EditorView.qml  GamePage.qml  GameSetup.qml  GameView.qml  HelpDialog.qml  KeyStack.qml  LobbyPage.qml  StartPage.qml  StatusBar.qml  TankSetup.qml  UI.qml  editorUtils.js
common/: CMakeLists.txt  Constants.hpp  FromServer.proto  MsgpackUtils.cpp  MsgpackUtils.hpp  ObjectTypeData.cpp  ObjectTypeData.hpp  TcpMessageSocket.cpp  TcpMessageSocket.hpp  ToClient.proto  ToServer.proto  VCS.cpp.in  VCS.hpp
data/: objects.json  tank_modules.json
data/fonts/: CREDITS
data/images/: bomb.kra  chest.kra  explosion.kra  explosion_side.kra  iwall.kra  tank.kra  wall.kra
data/sounds/: CREDITS
docs/: levelling.md
maps/: arena.btm2  arena2.btm2  colleseum.btm2  convert_to_bt2.py  jsonize_btm2_maps.py  large.btm2
server/: CMakeLists.txt  Game.cpp  Game.hpp  GameMode.cpp  GameMode.hpp  GameServer.cpp  GameServer.hpp  main.cpp
server/objects/: Base.cpp  Base.hpp  Crate.cpp  Crate.hpp  Markers.cpp  Markers.hpp  Objects.cpp  Objects.hpp  Projectiles.cpp  Projectiles.hpp  Queries.cpp  Queries.hpp  Tank.cpp  Tank.hpp  Turret.cpp  Turret.hpp  Utils.cpp  Utils.hpp  Walls.cpp  Walls.hpp
server/objects/actions/: DropModules.cpp  DropModules.hpp  MachineGun.cpp  MachineGun.hpp  MainGun.cpp  MainGun.hpp  MineDetector.cpp  MineDetector.hpp  RocketLauncher.cpp  RocketLauncher.hpp  StatBoostModules.cpp  StatBoostModules.hpp  StunModule.cpp  StunModule.hpp  TankModule.cpp  TankModule.hpp
src/: CMakeLists.txt  create_msg.proto  effect.cpp  effect.hpp  eventqueue.cpp  eventqueue.hpp  gamemanager.cpp  gamemanager.hpp  generic_msg.proto  main.cpp  map.cpp  map.hpp  maped.cpp  mapgenerator.cpp  mapgenerator.hpp  message.proto  msgpack_utils.hpp  object.cpp  object.hpp  orientation.hpp  point.cpp  point.hpp  rect.cpp  rect.hpp  rendermap.cpp  rendermap.hpp  servermap.cpp  servermap.hpp  signal.cpp  signal.hpp  stagemanager.cpp  stagemanager.hpp
src/objects/: attackutils.cpp  attackutils.hpp  bomb.cpp  bomb.hpp  chest.cpp  chest.hpp  dropitem.cpp  dropitem.hpp  effects.cpp  effects.hpp  floors.cpp  floors.hpp  loader.cpp  loader.hpp  player.cpp  player.hpp  playeritem.cpp  playeritem.hpp  projectiles.cpp  projectiles.hpp  walls.cpp  walls.hpp
